# mistral-hackathon

./: .env.example  .gitignore  FEEDBACK.md  INSTALL.md  README.md  SYSTEM_DESIGN.html  agent-local-changes.diff  docker-compose.yml  install.sh  knower
core/: Dockerfile  background.py  env.py  job_queue.py  main.py  pyproject.toml  qmd.py  sandbox.py  start.sh  terminal.py  tryme.py  vault_init.py  watcher.py
core/agent/: logger.py  terminal.py
core/agent/agent/: base_agent.py  context.py  display.py  search_agent.py  update_agent.py
core/agent/llm/: client.py  config.py
core/agent/prompts/: agent_loop_prompt.py  context_prompt.py  env_prompt.py  search_agent_prompt.py  search_prompt.py  tools_prompt.py  update_agent_prompt.py  update_prompt.py
core/agent/schemas/: event.py  message.py  tool.py
core/agent/tools/: append_tool.py  concat_tool.py  delete_tool.py  dummy_tools.py  edit_tool.py  move_tool.py  read_tool.py  search_tool.py  tool_base.py  tools.py  tree_tool.py  write_tool.py
core/agent/utils/: logger.py  raw_logger.py
core/api/: routes.py
core/functions/: utils.py
core/functions/appender/: __init__.py  appender.py
core/functions/concat/: __init__.py  concat.py
core/functions/delete/: __init__.py  deleter.py
core/functions/edit/: __init__.py  stripper.py
core/functions/files/: __init__.py  create.py
core/functions/frontmatter/: LLM.md  README.md  __init__.py  dev.py  layout.py  reader.py  updater.py  write_frontmatter.py  writer.py
core/functions/move/: __init__.py  mover.py
core/functions/read/: __init__.py  folder.py  images.py  reader.py
core/functions/search/: __init__.py  exclusions.py  models.py  query.py  scope.py  snippet.py
core/functions/tree/: __init__.py  create_tree_in_vault.py  (+6 more)
core/knower_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/mcp_server/: server.py  tools.py
core/tests/: mock_vault.py  test_search.py  test_snippet.py
(+161 files in other folders)
